Remove search & sort from pages
 - pages shouldn't have this functionality, moved to glass_engine for
   new plugins

--- a/app/views/refinery/admin/pages/index.html.erb
+++ b/app/views/refinery/admin/pages/index.html.erb
@@ -5,33 +5,9 @@
       <h2 class="admin-title">Pages</h2>
       <div class="contextual-menu">
         <div class="contextual-options">
-          
-          <!-- FILTERING -->
-          <!--
-  <div class="dropdown">
-            <button class="btn btn-link-grey" type="button" id="dropdown-filter" data-toggle="dropdown" aria-expanded="true">
-              <i class="gcicon gcicon-filter"></i> Filter by: <strong>Cats</strong> <span class="caret"></span>
-            </button>        
-            <ul class="dropdown-menu" role="menu" aria-labelledby="dropdown-filter">
-              <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Newest</a></li>
-              <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Oldest </a></li>
-              <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Alphabetical</a></li>
-              <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Reverse Alphabetical</a></li>
-            </ul>
-          </div>  
-  -->
-          
-          <div class="dropdown">
-            <button class="btn btn-link-grey" type="button" id="dropdown-sort" data-toggle="dropdown" aria-expanded="true">
-              <i class="gcicon gcicon-sort"></i> Sort by: <strong>Newest</strong> <span class="caret"></span>
-            </button>        
-            <ul class="dropdown-menu" role="menu" aria-labelledby="dropdown-sort">
-              <li role="presentation"><a role="menuitem" tabindex="-1" href="#"><i class="gcicon gcicon-sort"></i> Newest</a></li>
-              <li role="presentation"><a role="menuitem" tabindex="-1" href="#"><i class="gcicon gcicon-sort-two"></i> Oldest </a></li>
-              <li role="presentation"><a role="menuitem" tabindex="-1" href="#"><i class="gcicon gcicon-sort-alpha"></i> Alphabetical</a></li>
-              <li role="presentation"><a role="menuitem" tabindex="-1" href="#"><i class="gcicon gcicon-sort-alpha-two"></i> Reverse Alphabetical</a></li>
-            </ul>
-          </div>     
+          <button class="btn btn-link-grey">
+            <i class="gcicon gcicon-add"></i> <strong>Add page</strong>
+          </button>
           <button id='reorder_action' class="btn btn-link-grey">
             <i class="gcicon gcicon-reorder bump-down"></i> <strong>Reorder</strong>
           </button>
