--- a/lib/generators/refinery/glass_engine/templates/app/views/refinery/namespace/admin/plural_name/index.html.erb
+++ b/lib/generators/refinery/glass_engine/templates/app/views/refinery/namespace/admin/plural_name/index.html.erb
@@ -9,7 +9,7 @@
           <div class="dropdown">
             <button class="btn btn-link-grey" type="button" id="dropdown-filter" data-toggle="dropdown" aria-expanded="true">
               <i class="gcicon gcicon-filter"></i> Filter by: <strong>Cats</strong> <span class="caret"></span>
-            </button>        
+            </button>
             <ul class="dropdown-menu" role="menu" aria-labelledby="dropdown-filter">
               <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Newest</a></li>
               <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Oldest </a></li>
@@ -23,27 +23,27 @@
           <div class="dropdown">
             <button class="btn btn-link-grey" type="button" id="dropdown-sort" data-toggle="dropdown" aria-expanded="true">
               <i class="gcicon gcicon-sort"></i> Sort by: <strong>Newest</strong> <span class="caret"></span>
-            </button>        
+            </button>
             <ul class="dropdown-menu" role="menu" aria-labelledby="dropdown-sort">
               <li role="presentation"><a role="menuitem" tabindex="-1" href="#"><i class="gcicon gcicon-sort"></i> Newest</a></li>
               <li role="presentation"><a role="menuitem" tabindex="-1" href="#"><i class="gcicon gcicon-sort-two"></i> Oldest </a></li>
               <li role="presentation"><a role="menuitem" tabindex="-1" href="#"><i class="gcicon gcicon-sort-alpha"></i> Alphabetical</a></li>
               <li role="presentation"><a role="menuitem" tabindex="-1" href="#"><i class="gcicon gcicon-sort-alpha-two"></i> Reverse Alphabetical</a></li>
             </ul>
-          </div>    
+          </div>
           -->
             
           <%% if !searching? && ::Refinery::<%= namespacing %>::Admin::<%= class_name.pluralize %>Controller.sortable? && ::Refinery::<%= namespacing %>::<%= class_name %>.many? %>
             <button id='reorder_action' class="btn btn-link-grey">
-              <i class="gcicon gcicon-reorder bump-down"></i> <span class="hidden-xs"><strong><%%= t('reorder',      :scope => 'refinery.admin.search') %></strong></span>
+              <i class="gcicon gcicon-reorder bump-down"></i> <strong><%%= t('reorder',      :scope => 'refinery.admin.search') %></strong>
             </button>
             <button id='reorder_action_done' class="btn btn-link-grey" style="display: none;">
-              <i class="gcicon gcicon-reorder bump-down"></i> <span class="hidden-xs"><strong><%%= t('reorder_done', :scope => 'refinery.admin.search') %></strong></span>
+              <i class="gcicon gcicon-reorder bump-down"></i> <strong><%%= t('reorder_done', :scope => 'refinery.admin.search') %></strong>
             </button>
           <%% end %>
 
           <a href="<%%= refinery.new_<%= namespacing.underscore %>_admin_<%= singular_name %>_path %>" class="btn btn-link-grey">
-            <i class="gcicon gcicon-add"></i> <span class="hidden-xs"><strong><%%= t('.new') %></strong></span>
+            <i class="gcicon gcicon-add"></i> <strong><%%= t('.new') %></strong>
           </a>
           <%% if ::Refinery::<%= namespacing %>::Admin::<%= class_name.pluralize %>Controller.searchable? %>
             <%%= render '/refinery/admin/search', :url => refinery.<%= namespacing.underscore %>_admin_<%= plural_name %><%= "_index" if plural_name == singular_name%>_path %>
