--- a/app/assets/stylesheets/refinery-glass.scss
+++ b/app/assets/stylesheets/refinery-glass.scss
@@ -1,14 +1,4 @@
-@import "config/variables";
-@import "canvas/config/base-variables";
-@import "canvas/bootstrap/variables";
-@import "config/mixins";
-@import "canvas/config/base-mixins";
-@import "canvas/config/base";
-@import "glass/icons";
-@import "glass/icon-styles";
-@import "glass/images";
-@import "canvas/sidebar";
-@import "canvas/dimmer";
+@import "partials/canvas";
 
 
 /* -------------------- TEMPORARY -------------------- */
@@ -28,6 +18,11 @@ img.pull-left{
 	padding-top: 120px;
 	width: 100%;
 	margin-bottom: 30px;
+}
+
+#image-upload-form {
+  position: absolute;
+  top: -100px;
 }
 
 /* -------------------- MAIN -------------------- */
