--- a/app/views/layouts/refinery/admin.html.erb
+++ b/app/views/layouts/refinery/admin.html.erb
@@ -4,7 +4,7 @@
   <head>
     <%= render '/refinery/admin/head' %>
   </head>
-  <body class="<%= action_name %> <%= I18n.locale %> modal-page pushable dimmable scrolling">
+  <body class="<%= action_name %> <%= I18n.locale %>">
 
     <section id="sidebar-left" class="ui sidebar overlay">
       <div class="site-name">
