--- a/app/assets/stylesheets/canvas/_modal.scss
+++ b/app/assets/stylesheets/canvas/_modal.scss
@@ -1,3 +1,16 @@
+ /*
+ * # Semantic UI
+ * https://github.com/Semantic-Org/Semantic-UI
+ * http://www.semantic-ui.com/
+ *
+ * Copyright 2014 Contributors
+ * Released under the MIT license
+ * http://opensource.org/licenses/MIT
+ *
+ */
+
+
+
 /*******************************
              Modal
 *******************************/
