--- a/app/views/refinery/admin/pages/new.html.erb
+++ b/app/views/refinery/admin/pages/new.html.erb
@@ -79,57 +79,64 @@
 	</div>
 </section>
 
-<div class="page-preview-content">
-  <h1 contenteditable="true">Title</h1>
-  <p contenteditable="true">Est Banksy nihil <a href="">new link</a> gastropub eu, <strong>consequat vero semiotics.</strong> Keytar trust fund bitters flexitarian. <em>Direct trade pickled Etsy Odd</em> Future, fingerstache veniam YOLO Shoreditch dolor aute Pinterest kogi letterpress. Meggings aesthetic deserunt semiotics, lomo chillwave occaecat flexitarian drinking vinegar. Excepteur scenester Godard drinking vinegar banh mi. Bicycle rights incididunt tousled, culpa Neutra cupidatat Schlitz mollit disrupt. Lomo non polaroid, twee iPhone DIY biodiesel nulla.</p>
-  <blockquote>
-    <p>
-    Est Banksy nihil gastropub eu, consequat vero semiotics. Keytar trust fund bitters flexitarian. Direct trade pickled Etsy Odd Future, fingerstache veniam YOLO Shoreditch dolor aute Pinterest kogi letterpress. Meggings aesthetic deserunt semiotics, lomo chillwave occaecat flexitarian drinking vinegar. Excepteur scenester Godard drinking vinegar banh mi. Bicycle rights incididunt tousled, culpa Neutra cupidatat Schlitz mollit disrupt. Lomo non polaroid, twee iPhone DIY biodiesel nulla.
-    </p>
-    <footer>Someone famous</footer>
-  </blockquote>
-  <div class="highlight-editor">
-    <a href=""><i class="gcicon gcicon-bold"></i></a>
-    <a href=""><i class="gcicon gcicon-italic"></i></a>
-    <a href=""><i class="gcicon gcicon-heading"></i></a>
-    <a href=""><i class="gcicon gcicon-list-bullet"></i></a>
-    <a href=""><i class="gcicon gcicon-list-number"></i></a>
-    <a href=""><i class="gcicon gcicon-quote"></i></a>
-    <a href=""><i class="gcicon gcicon-link"></i></a>
-  </div>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-  <img class="img-responsive pull-left" src="/assets/testimonial-lego.jpg"/>
-  <p>Est Banksy nihil gastropub eu, consequat vero semiotics. Keytar trust fund bitters flexitarian. Direct trade pickled Etsy Odd Future, fingerstache veniam YOLO Shoreditch dolor aute Pinterest kogi letterpress. Meggings aesthetic deserunt semiotics, lomo chillwave occaecat flexitarian drinking vinegar. Excepteur scenester Godard drinking vinegar banh mi. Bicycle rights incididunt tousled, culpa Neutra cupidatat Schlitz mollit disrupt. Lomo non polaroid, twee iPhone DIY biodiesel nulla.</p>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          
-  <div class="glass-module new-module clear">
-    <p contenteditable="true" placeholder="New Paragraph..."></p>
-  </div>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12">
+      <div class="page-preview-content">
+        <h1 contenteditable="true">Title</h1>
+        <p contenteditable="true">Est Banksy nihil <a href="">new link</a> gastropub eu, <strong>consequat vero semiotics.</strong> Keytar trust fund bitters flexitarian. <em>Direct trade pickled Etsy Odd</em> Future, fingerstache veniam YOLO Shoreditch dolor aute Pinterest kogi letterpress. Meggings aesthetic deserunt semiotics, lomo chillwave occaecat flexitarian drinking vinegar. Excepteur scenester Godard drinking vinegar banh mi. Bicycle rights incididunt tousled, culpa Neutra cupidatat Schlitz mollit disrupt. Lomo non polaroid, twee iPhone DIY biodiesel nulla.</p>
+        <div class="highlight-editor">
+          <a href=""><i class="gcicon gcicon-bold"></i></a>
+          <a href=""><i class="gcicon gcicon-italic"></i></a>
+          <a href=""><i class="gcicon gcicon-heading"></i></a>
+          <a href=""><i class="gcicon gcicon-list-bullet"></i></a>
+          <a href=""><i class="gcicon gcicon-list-number"></i></a>
+          <a href=""><i class="gcicon gcicon-quote"></i></a>
+          <a href=""><i class="gcicon gcicon-link"></i></a>
+        </div>
+        <p>Est Banksy nihil gastropub eu, consequat vero semiotics. Keytar trust fund bitters flexitarian. Direct trade pickled Etsy Odd Future, fingerstache veniam YOLO Shoreditch dolor aute Pinterest kogi letterpress. Meggings aesthetic deserunt semiotics, lomo chillwave occaecat flexitarian drinking vinegar. Excepteur scenester Godard drinking vinegar banh mi. Bicycle rights incididunt tousled, culpa Neutra cupidatat Schlitz mollit disrupt. Lomo non polaroid, twee iPhone DIY biodiesel nulla.</p>
 
-  <div id="glass-parking" style="display: none;">
-    <div class="glass-module new-module clear blank">
-      <p contenteditable="true" placeholder="New Paragraph..."></p>
-    </div>
-    <a id="glass-change-module" href="" class="circle-icon add-module glass-control"><i class="gcicon gcicon-plus"></i></a>
-    <div id="glass-choose-module" class="new-module media-chooser clear glass-control">
-      <a href=""                              class="circle-icon add-module"><i class="gcicon gcicon-plus glass-module-close"></i></a>
-      <a href="" id="glass-choose-module-p"   class="circle-icon media-type"><i class="gcicon gcicon-paragraph bump-down"></i></a>
-      <a href="" id="glass-choose-module-img" class="circle-icon media-type"><i class="gcicon gcicon-photo bump-down"></i></a>
-      <a href="" id="glass-choose-module-vid" class="circle-icon media-type"><i class="gcicon gcicon-film"></i></a>
-    </div>
-    <div id="glass-choose-vid" class="new-module media-chooser clear">
-      <a href="" class="circle-icon add-module"><i class="gcicon gcicon-plus glass-module-close"></i></a>
-      <form role="form">
-        <div class="form-group">
-          <div class="input-group">
-            <div class="input-group-addon">Vimeo or YouTube URL</div>
-            <input class="form-control" type="text" placeholder="http://...">
+      
+       <!--
+ <blockquote>
+          <p>
+          Est Banksy nihil gastropub eu, consequat vero semiotics. Keytar trust fund bitters flexitarian. Direct trade pickled Etsy Odd Future, fingerstache veniam YOLO Shoreditch dolor aute Pinterest kogi letterpress. Meggings aesthetic deserunt semiotics, lomo chillwave occaecat flexitarian drinking vinegar. Excepteur scenester Godard drinking vinegar banh mi. Bicycle rights incididunt tousled, culpa Neutra cupidatat Schlitz mollit disrupt. Lomo non polaroid, twee iPhone DIY biodiesel nulla.
+          </p>
+          <footer>Someone famous</footer>
+        </blockquote>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <img class="img-responsive pull-left" src="/assets/testimonial-lego.jpg"/>
+        <p>Est Banksy nihil gastropub eu, consequat vero semiotics. Keytar trust fund bitters flexitarian. Direct trade pickled Etsy Odd Future, fingerstache veniam YOLO Shoreditch dolor aute Pinterest kogi letterpress. Meggings aesthetic deserunt semiotics, lomo chillwave occaecat flexitarian drinking vinegar. Excepteur scenester Godard drinking vinegar banh mi. Bicycle rights incididunt tousled, culpa Neutra cupidatat Schlitz mollit disrupt. Lomo non polaroid, twee iPhone DIY biodiesel nulla.</p>
+-->                
+        <div class="glass-module new-module clear">
+          <p contenteditable="true" placeholder="New paragraph..."></p>
+        </div>
+        <div id="glass-parking" style="display: none;">
+          <div class="glass-module new-module clear blank">
+            <p contenteditable="true" placeholder="New paragraph..."></p>
+          </div>
+          <a id="glass-change-module" href="" class="circle-icon add-module glass-control"><i class="gcicon gcicon-plus"></i></a>
+          <div id="glass-choose-module" class="new-module media-chooser clear glass-control">
+            <a href=""                              class="circle-icon add-module"><i class="gcicon gcicon-plus glass-module-close"></i></a>
+            <a href="" id="glass-choose-module-p"   class="circle-icon media-type"><i class="gcicon gcicon-paragraph bump-down"></i></a>
+            <a href="" id="glass-choose-module-img" class="circle-icon media-type"><i class="gcicon gcicon-photo bump-down"></i></a>
+            <a href="" id="glass-choose-module-vid" class="circle-icon media-type"><i class="gcicon gcicon-film"></i></a>
+          </div>
+          <div id="glass-choose-vid" class="new-module media-chooser clear">
+            <a href="" class="circle-icon add-module"><i class="gcicon gcicon-plus glass-module-close"></i></a>
+            <form role="form">
+              <div class="form-group">
+                <div class="input-group">
+                  <div class="input-group-addon">Vimeo or YouTube URL</div>
+                  <input class="form-control" type="text" placeholder="http://...">
+                </div>
+              </div>
+            </form>
           </div>
         </div>
-      </form>
+      </div>
     </div>
   </div>
-  
 </div>
 
 
