--- a/app/assets/stylesheets/refinery-glass.scss
+++ b/app/assets/stylesheets/refinery-glass.scss
@@ -759,6 +759,8 @@ body{
       margin: 0 5px 0 0;
     }
     .add-module{
+      position: absolute;
+      left: -45px;
       .gcicon{
         top: 1px;
       }
